--- a/web-app/pom.xml
+++ b/web-app/pom.xml
@@ -1,29 +1,27 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
     <parent>
         <groupId>learn.lynn</groupId>
         <artifactId>multimoduleex</artifactId>
         <version>${revision}</version>
     </parent>
 
-    <artifactId>jpa-entities</artifactId>
-
+    <artifactId>web-app</artifactId>
     <packaging>jar</packaging>
+
+    <name>web-app</name>
 
     <dependencies>
         <dependency>
-            <groupId>org.hibernate.orm</groupId>
-            <artifactId>hibernate-core</artifactId>
-            <version>6.6.0.Final</version>
+            <groupId>learn.lynn</groupId>
+            <artifactId>jpa-entities</artifactId>
+            <version>${revision}</version>
         </dependency>
         <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <version>1.18.34</version>
-            <scope>provided</scope>
+            <groupId>learn.lynn</groupId>
+            <artifactId>module-intellij-created</artifactId>
+            <version>${revision}</version>
         </dependency>
-
     </dependencies>
 </project>
